[project]
name = "mitmproxy"
description = "An interactive, SSL/TLS-capable intercepting proxy for HTTP/1, HTTP/2, and WebSockets."
readme = "README.md"
requires-python = ">=3.12"
license = {file="LICENSE"}
authors = [{name = "Aldo Cortesi", email = "aldo@corte.si"}]
maintainers = [{name = "Maximilian Hils", email = "mitmproxy@maximilianhils.com"}]
dynamic = ["version"]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console :: Curses",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

# Loosened dependency constraints for Intellicrack compatibility
# Original mitmproxy 12.2.1 dependencies with relaxed upper bounds
dependencies = [
    "aioquic>=1.2.0",
    "argon2-cffi>=23.1.0",
    "asgiref>=3.2.10",
    "bcrypt>=5.0.0",
    "Brotli>=1.0",
    "certifi>=2019.9.11",
    "cryptography>=42.0",
    "flask>=3.0",
    "h11>=0.16.0",
    "h2>=4.3.0",
    "hyperframe>=6.0",
    "kaitaistruct>=0.10",
    "ldap3>=2.8",
    "mitmproxy_rs>=0.12.6",
    "msgpack>=1.0.0",
    "pydivert>=2.0.3; sys_platform == 'win32'",
    "pyOpenSSL>=24.3",
    "pyparsing>=2.4.2",
    "pyperclip>=1.9.0",
    "ruamel.yaml>=0.18.10",
    "sortedcontainers>=2.3",
    "tornado>=6.5.0",
    "typing-extensions>=4.13.2; python_version < '3.13'",
    "urwid>=2.6.14",
    "wsproto>=1.0",
    "publicsuffix2>=2.20190812",
    "zstandard>=0.15",
]

[dependency-groups]
dev = [
    "click>=8.0.0",
    "hypothesis>=6.0.0",
    "maturin>=1.0.0",
    "pdoc>=15.0.0",
    "pyinstaller>=6.0.0",
    "pyinstaller-hooks-contrib>=2024.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-xdist>=3.0.0",
    "pytest>=8.0.0",
    "requests>=2.32.0",
    "wheel>=0.40.0",
    "build>=1.0.0",
    "mypy>=1.0.0",
    "types-requests>=2.32.0",
]
tox = [
    "tox>=4.0.0",
    "tox-uv>=1.0.0",
]
ruff = [
    "ruff>=0.1.0",
]
deploy = [
    "awscli>=1.0.0",
    "twine>=6.0.0",
]

[project.urls]
Homepage = "https://mitmproxy.org"
Source = "https://github.com/mitmproxy/mitmproxy/"
Documentation = "https://docs.mitmproxy.org/stable/"
Issues = "https://github.com/mitmproxy/mitmproxy/issues"

[project.scripts]
mitmproxy = "mitmproxy.tools.main:mitmproxy"
mitmdump = "mitmproxy.tools.main:mitmdump"
mitmweb = "mitmproxy.tools.main:mitmweb"

[project.entry-points.pyinstaller40]
hook-dirs = "mitmproxy.utils.pyinstaller:hook_dirs"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "mitmproxy.version.VERSION"}

[tool.setuptools.packages.find]
include = ["mitmproxy*"]

[tool.coverage.run]
branch = false
omit = [
    "*contrib*",
    "*tnetstring*",
    "*platform*",
    "*main.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise AssertionError",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
    "@overload",
    "@abstractmethod",
    "assert_never",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = "test"
addopts = "--capture=no --color=yes"
filterwarnings = [
    "ignore::DeprecationWarning:tornado.*:",
    "ignore:datetime.datetime.utcnow:DeprecationWarning:aioquic.*:",
    "error::RuntimeWarning",
    "error::pytest.PytestUnraisableExceptionWarning",
]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
files = [
    "mitmproxy",
    "examples/addons",
    "release/*.py",
]
exclude = [
    "^docs/",
    "^release/build/",
    "^examples/contrib/",
]

[[tool.mypy.overrides]]
module = "mitmproxy.contrib.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tornado.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "test.*"
ignore_errors = true

[tool.ruff]
extend-exclude = ["mitmproxy/contrib/"]

[tool.ruff.lint]
select = ["E", "F", "I", "TID251"]
ignore = ["F541", "E501"]

[tool.ruff.lint.per-file-ignores]
"examples/**" = ["TID251"]
"test/**" = ["TID251"]

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false
section-order = ["future", "standard-library", "third-party", "local-folder","first-party"]
no-lines-before = ["first-party"]
known-first-party = ["test", "mitmproxy", "mitmproxy_rs"]
